deployments/productivity/productivity.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "productivity"
  name: "productivity-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - productivity.192.168.1.100.nip.io
    secretName: "productivity.192.168.1.100.nip.io-prod-tls"
  rules:
  - host: "n8n.192.168.1.100.nip.io"
    http:
      paths:
        - backend:
            serviceName: "n8n"
            servicePort: 80
          path: ""
